# temporal-random-walk

./: CLAUDE.md  CMakeLists.txt  Doxyfile  RAII_migration_progress.md  README.md  a40_winning_config_bench.py  alibaba_bench.py  alibaba_bench_profiling.py  build_commands.txt  build_wheels.sh  debug_backward_parity.py  requirements.txt  setup.py
.claude/: settings.json
.github/: settings.yml
.github/workflows/: build_ci_image.yml  cpu-tests.yml
build_scripts/: Dockerfile  asan_build.sh  asan_build_macos.sh  build_in_vm.sh  build_wheels.sh
build_scripts/build_12_6/: Dockerfile
build_scripts/build_12_8/: Dockerfile
ci/: Dockerfile  run_cpu_tests.sh
data/: sample_data.csv
docs/: _temporal_random_walk.md
docs/html/: TemporalRandomWalk_8cuh_source.html  _temporal_random_walk_8cuh_source.html  _temporal_random_walk_proxy_8cuh_source.html  annotated.html  annotated_dup.js  classTemporalRandomWalk-members.html  classTemporalRandomWalk.html  class_temporal_random_walk-members.html  class_temporal_random_walk.html  class_temporal_random_walk_proxy-members.html  class_temporal_random_walk_proxy.html  classes.html  dir_11e3513d4656415d8a8e2605e11d0cad.html  dir_2cb6c84061b19065b8f56ff881d3ea1c.html  dir_2cb6c84061b19065b8f56ff881d3ea1c.js  dir_2cb6c84061b19065b8f56ff881d3ea1c_dep.dot  dir_aefe9b9f5d5c30e091514a4a1ff8fba9.html  dir_aefe9b9f5d5c30e091514a4a1ff8fba9.js  dir_aefe9b9f5d5c30e091514a4a1ff8fba9_dep.dot  doxygen_crawl.html  files.html  graph_legend.html  index.html  navtreedata.js  navtreeindex0.js
docs/html/search/: classes_0.js
py_tests/: temporal_random_walk_networkx_integration_test.py  temporal_random_walk_test.py  test_edge_features.py
supporting_scripts/: ablation_runner.py
synthetic_data_generator/: .gitignore  README.txt  bench_synthetic.py  e2e_gap_grid_wpn_mwl.py  e2e_gap_vs_length.py  e2e_gap_vs_mwl.py  e2e_three_factor_ablation.py  gen_synthetic_stratified.py  profile_synthetic.py  sweep_gap_vs_length.py  sweep_walk_lengths.py  synthetic_stratified.stats.txt
temporal_random_walk/: __init__.py
temporal_random_walk/py_interface/: CMakeLists.txt  _temporal_random_walk.cpp  _temporal_random_walk.cu  buffer_to_numpy.cuh  random_picker_proxies.h  temporal_random_walk_proxy.h
temporal_random_walk/src/common/: comparators.cuh  const.cuh  constants.cuh  cuda_buffer.cuh  cuda_config.cuh  cuda_scan.cuh  cuda_sort.cuh  error_handlers.cuh  functors.cuh  memory.cuh  nvtx.cuh  nvtx_utils.h  parallel_algorithms.cuh  picker_dispatch.cuh  random_gen.cu  random_gen.cuh  setup.cu  setup.cuh  warp_coop_config.cuh
temporal_random_walk/src/core/: ITemporalRandomWalk.cu  ITemporalRandomWalk.cuh  TemporalRandomWalk.cu  TemporalRandomWalk.cuh  TemporalRandomWalkCPU.cu  TemporalRandomWalkCPU.cuh  TemporalRandomWalkCUDA.cu  TemporalRandomWalkCUDA.cuh  helpers.cuh  temporal_random_walk.cu  temporal_random_walk.cuh  temporal_random_walk_cpu.cuh  temporal_random_walk_kernels.cu  temporal_random_walk_kernels.cuh  temporal_random_walk_kernels_full_walk.cuh  temporal_random_walk_kernels_launcher.cuh  temporal_random_walk_kernels_node_grouped.cuh  temporal_random_walk_kernels_step_based.cuh  temporal_random_walk_node_grouped_dispatch.cuh  temporal_random_walk_node_grouped_scheduler.cu  temporal_random_walk_node_grouped_scheduler.cuh
temporal_random_walk/src/cuda_common/: setup.cu  setup.cuh
temporal_random_walk/src/data/: IntHashMap.cu  IntHashMap.cuh  WalkSet.cu  WalkSet.cuh  buffer.cu  buffer.cuh  device_arena.cuh  enums.cuh  structs.cuh  temporal_graph_data.cuh  temporal_graph_view.cuh  walk_set.cuh  walks_with_edge_features_host.cuh
temporal_random_walk/src/graph/: edge_data.cu  edge_data.cuh  edge_selectors.cuh  node_edge_index.cu  node_edge_index.cuh  node_features.cu  node_features.cuh  store_helpers.cuh  temporal_graph.cu  temporal_graph.cuh  temporal_node2vec_helpers.cuh  walk_step_helpers.cuh
temporal_random_walk/src/proxies/: EdgeData.cu  EdgeData.cuh  EdgeDataProxy.cu  EdgeDataProxy.cuh  NodeEdgeIndex.cu  NodeEdgeIndex.cuh  NodeEdgeIndexProxy.cu  NodeEdgeIndexProxy.cuh  NodeFeatures.cu  NodeFeatures.cuh  NodeMapping.cu  NodeMapping.cuh  NodeMappingProxy.cu  NodeMappingProxy.cuh  RandomPicker.cu  RandomPicker.cuh  RandomPickerProxies.cu  RandomPickerProxies.cuh  TemporalGraph.cu  TemporalGraph.cuh  TemporalGraphProxy.cu  TemporalGraphProxy.cuh  TemporalRandomWalk.cu  TemporalRandomWalk.cuh  TemporalRandomWalkProxy.cu  TemporalRandomWalkProxy.cuh  edge_picker_proxy.cuh  node_edge_index_proxy.cuh  node_mapping_proxy.cuh  temporal_graph_proxy.cuh
temporal_random_walk/src/random/: ExponentialIndexRandomPicker.cu  ExponentialIndexRandomPicker.cuh  IndexBasedRandomPicker.cu  IndexBasedRandomPicker.cuh  LinearRandomPicker.cu  LinearRandomPicker.cuh  RandomPicker.h  UniformRandomPicker.cu  (+5 more)
temporal_random_walk/test/: CMakeLists.txt  CPU_GPU_PAIRING.md  test_data_layer.cpp  test_edge_data.cpp  test_edge_data_weights.cpp  test_gpu_scheduling.cpp  test_hash_map.cpp  test_node_edge_index.cpp  test_node_edge_index_weights.cpp  test_node_features.cpp  test_node_grouped_block_task_expansion.cpp  test_node_grouped_g_partition.cpp  test_node_grouped_parity.cpp  test_node_grouped_w_partition.cpp  test_node_grouped_walk_tier_routing.cpp  test_node_mapping.cpp  test_random_picker.cpp  test_spatiotemporal_bias.cpp  test_temporal_graph.cpp  test_temporal_graph_get_node_edge_at.cpp  test_temporal_graph_utils.h  test_temporal_graph_weights.cpp  test_temporal_node2vec.cpp  test_temporal_node2vec_rejection.cpp  test_temporal_random_walk.cpp  test_temporal_random_walk_edge_features.cpp  test_utils.h  test_walk_cutoff_times.cpp  test_walk_padding_value.cpp  test_weight_based_random_picker.cpp
temporal_random_walk/test_run/: CMakeLists.txt  ablation_full.cpp  ablation_streaming.cpp  test_alibaba_streaming.cpp  test_large_data_addition.cpp  test_run_exponential_picker.cpp  test_run_temporal_random_walk.cpp  test_run_temporal_random_walk_2.cpp  test_run_temporal_random_walk_3.cpp  test_run_temporal_random_walk_4.cpp  test_utils.h  test_utils_parquet.cpp  walk_sampling_speed_test.cpp
(+71 files in other folders)
